elfk/kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: public-service
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
