elfk/kibana/kibana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: public-service
spec:
  rules:
    - host: kibana.lzxlinux.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
